[package]
name = "nostr_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "nostr_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
rand = ["secp256k1/rand-std"]

[dependencies]
rustler = "0.26.0"
secp256k1 = { version = "0.25.0", features = [ "rand-std", "bitcoin-hashes-std" ] }
bech32 = "0.9.1"
serde_json = "1.0"
